# supermicro-gpu-fan-controller

./: Pipfile  README.md  pyproject.toml
app/libs/: nvidia_smi.py
